# ai-eng-experiments

./: local_ollama_rag.ipynb  pyproject.toml
