[project]
name = "ollama-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.2.1",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.7",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
